# git-money-ideas

./: .gitignore  AGENTDB_DISCOVERY_INSIGHTS.md  AGENTDB_TRAINING_GUIDE.md  ALL_50_OPPORTUNITIES.txt  CODESPACES_SETUP.md  DB-GPT-Monetization-Strategy-Analysis.md  DB-GPT-Stargazers-Fast-Money-Opportunities.md  DB-GPT-Stargazers-Upgrade-Opportunities.md  DEPLOYMENT_COMPLETE.md  EXECUTIVE_SUMMARY.md  FASTEST_PATH_TO_10K_REVENUE.md  FINAL_TOP_20_OPPORTUNITIES.md  GAMIFICATION_DESIGN.md  GET_GITHUB_TOKEN.md  HIDDEN_GEM_SYSTEM.md  QUICK_ACTION_GUIDE.md  QUICK_START.md  README.md  README_ANALYSIS.md  README_AUTOMATION.md  RUST_IMPLEMENTATION_GUIDE.md  SETUP_CODESPACES.md  SIGNIFICANT_IMPROVEMENTS_REPORT.md  STARGAZERS_SUMMARY.md  WASM_IMPLEMENTATION_CHECKLIST.md  WASM_INFINITE_DISCOVERY.md  WASM_INFINITE_DISCOVERY_ARCHITECTURE.md  WASM_NEXT_LEVEL_GUIDE.md  WASM_PROJECT_SUMMARY.md  WASM_QUICK_REFERENCE.md  WASM_README.md  advanced_discovery_engine.py  ai_generated_ideas_20251024_122338.json  ai_idea_generator.py  algorithm_learning_history.json  analysis_log.txt  analyze_monetizable_repos.py  automated_report_generator.py  comprehensive_monetization_report.md  continuous_discovery.py  (+24 more)
.devcontainer/: devcontainer.json
docs/: QUICK_DEPLOY.md  (+4 more)
gitbank-rust/: Cargo.toml  README.md
gitbank-rust/src/: lib.rs  main.rs  wasm_discovery.rs
gitbank-rust/src/agentdb/: client.rs  mod.rs  training.rs
gitbank-rust/src/analysis/: mod.rs
gitbank-rust/src/discovery/: mod.rs
gitbank-rust/src/fetch/: mod.rs
gitbank-rust/src/reporting/: mod.rs
gitbank-rust/src/storage/: mod.rs
(+9 files in other folders)
